# bazel-scala-example

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  maven_install.json
backend/: BUILD.bazel  lib.scala  main.scala
backend/akka/: BUILD.bazel  lib.scala  main.scala  reflection-config.json
backend/cats/: BUILD.bazel  main.scala
bazel/: config.bzl  extensions.bzl
queries/: unused_maven_deps.sh
