load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")

# Need to run this target because metals seems to default to using a version that
# breaks auto fix context actions (at least in Metals 1.3.1)
java_binary(
    name = "bazel_bsp",
    main_class = "org.jetbrains.bsp.bazel.install.Install",
    runtime_deps = ["@mvn//:org_jetbrains_bsp_bazel_bsp"],
)

scala_toolchain(
    name = "semanticdb_toolchain_impl",
    enable_semanticdb = True,
    semanticdb_bundle_in_jar = False,
    visibility = ["//visibility:public"],
)

toolchain(
    name = "semanticdb_toolchain",
    toolchain = "semanticdb_toolchain_impl",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)
