load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")

# Need to run this target because metals seems to default to using a version that
# breaks auto fix context actions (at least in Metals 1.3.1)
java_binary(
    name = "bazel_bsp",
    main_class = "org.jetbrains.bsp.bazel.install.Install",
    runtime_deps = ["@mvn//:org_jetbrains_bsp_bazel_bsp"],
)

scala_toolchain(
    name = "semanticdb_toolchain_impl",
    # scalac needs access to transitive deps
    # at compile time or it'll fail mysteriously.
    #
    # Note that this will still allow builds that
    # implicitly depend on transitive deps to fail
    # to compile as you'd want.
    dependency_mode = "transitive",
    # Works extremely well, but as noted, not sure the cost of this vs regular AST mode
    dependency_tracking_method = "ast-plus",
    enable_semanticdb = True,
    semanticdb_bundle_in_jar = False,
    strict_deps_mode = "error",
    # Could use a `select` to make it warn in dev mode and error in prod/ci
    unused_dependency_checker_mode = "error",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "semanticdb_toolchain",
    toolchain = "semanticdb_toolchain_impl",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)
