load("@constants//:vars.bzl", "SCALA_VERSION_SUFFIX")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library")

scala_library(
    name = "lib",
    srcs = ["lib.scala"],
    deps = [],
)

scala_binary(
    name = "main",
    srcs = ["main.scala"],
    main_class = "com.github.timbess.ActorHierarchyExperiments",
    runtime_deps = [
        "@mvn//:ch_qos_logback_logback_classic",
    ],
    deps = [
        ":lib",
        "@mvn//:com_typesafe_config",
        "@mvn//:org_apache_pekko_pekko_actor_{}".format(SCALA_VERSION_SUFFIX),
        "@mvn//:org_apache_pekko_pekko_actor_typed_{}".format(SCALA_VERSION_SUFFIX),
        "@mvn//:org_apache_pekko_pekko_http_{}".format(SCALA_VERSION_SUFFIX),
        "@mvn//:org_apache_pekko_pekko_http_core_{}".format(SCALA_VERSION_SUFFIX),
        "@mvn//:org_apache_pekko_pekko_stream_{}".format(SCALA_VERSION_SUFFIX),
        "@mvn//:org_slf4j_slf4j_api",
    ],
)

alias(
    name = "backend",
    actual = ":main",
)
