load("@constants//:vars.bzl", "SCALA_VERSION_SUFFIX")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("@io_bazel_rules_scala_config//:config.bzl", "SCALA_VERSIONS")
load("@rules_graalvm//graalvm:defs.bzl", "native_image")

scala_binary(
    name = "main",
    srcs = ["main.scala"],
    main_class = "com.github.timbess.cats.Main",
    runtime_deps = [
        "@mvn//:ch_qos_logback_logback_classic",
    ],
    deps = [
        "@mvn//:org_typelevel_cats_core_" + SCALA_VERSION_SUFFIX,
        "@mvn//:org_typelevel_cats_effect_" + SCALA_VERSION_SUFFIX,
        "@mvn//:org_typelevel_cats_effect_kernel_" + SCALA_VERSION_SUFFIX,
        "@mvn//:org_typelevel_log4cats_core_" + SCALA_VERSION_SUFFIX,
        "@mvn//:org_http4s_http4s_dsl_" + SCALA_VERSION_SUFFIX,
        "@mvn//:org_http4s_http4s_ember_server_" + SCALA_VERSION_SUFFIX,
        "@mvn//:io_circe_circe_core_" + SCALA_VERSION_SUFFIX,
        "@mvn//:io_circe_circe_literal_" + SCALA_VERSION_SUFFIX,
        "@mvn//:org_typelevel_log4cats_slf4j_" + SCALA_VERSION_SUFFIX,
        "@mvn//:com_comcast_ip4s_core_" + SCALA_VERSION_SUFFIX,
        "@mvn//:co_fs2_fs2_io_" + SCALA_VERSION_SUFFIX,
        "@mvn//:org_http4s_http4s_core_" + SCALA_VERSION_SUFFIX,
        "@mvn//:org_scala_lang_scala_library",
    ],
)

native_image(
    name = "main_native",
    main_class = "com.github.timbess.cats.Main",
    native_image_tool = "@graalvm//:native-image",
    tags = ["manual"],
    deps = [":main"],
)

alias(
    name = "cats",
    actual = ":main",
)
